// Specifies the syntax version for this proto file.
syntax = "proto3";

// Sets the Go package for the generated code.
option go_package = "./proto/review";

// Define the package name for this proto file.
package review;

// ReviewService is a service that provides APIs for posting and getting restaurant reviews.
service ReviewService {
    // PostReview is an RPC method for adding a restaurant review.
    rpc PostReview(PostReviewRequest) returns (PostReviewResponse);

    // GetReview is an RPC method for getting a restaurant review of a user.
    rpc GetReview(GetReviewRequest) returns (GetReviewResponse);

    // SearchReviews is an RPC method for searching for all reviews of a restaurant.
    rpc SearchReviews(SearchReviewsRequest) returns (SearchReviewsResponse);
}

// PostReviewRequest is the request message to post a review.
message PostReviewRequest {
    string user_name = 1;
    string restaurant_name = 2;
    string review = 3;
    int32 rating = 4;
}

// PostReviewResponse is the response message for the PostReview RPC method.
message PostReviewResponse {
    bool status = 1;
}

// GetReviewRequest is the request message for getting a review by a user.
message GetReviewRequest {
    string restaurant_name = 1;
    string user_name = 2;
}

// GetReviewResponse is the response message for the GetReview RPC method.
message GetReviewResponse {
    string user_name = 1;
    string restaurant_name = 2;
    string review = 3;
    int32 rating = 4;
}

// SearchReviewsRequest is the request message to search for all reviews of a restaurant.
message SearchReviewsRequest {
    string restaurant_name = 1;
}

// SearchReviewsResponse is the response message for the SearchReviews RPC method.
message SearchReviewsResponse {
    // A map from user names to their respective reviews for a given restaurant
    map<string, GetReviewResponse> reviews_map = 1;
}

